# ThirdParty

./: README.md
OpenNI2/jderobot-openni2-2.2.0/debian/: changelog  control  files
OpenNI2/openni2-2.2.0/: Makefile
OpenNI2/openni2-2.2.0/.pc/: applied-patches
OpenNI2/openni2-2.2.0/debian/: changelog  control  files  rules
ardronelib/: CMakeLists.txt  README.md  ardronelib.pc.in  ffmpeg-0.8.pc.in
gazebo-5.3.0/: .hg_archival.txt
kobukilib/: README.md
kobukilib/src/: .rosinstall  .rosinstall.bak  CMakeLists.txt  catkin_whitelist  catkin_whitelist.sh  cpackit.cmake  nocatkin.cmake
kobukilib/src/catkin/: package.xml  setup.py
kobukilib/src/ecl_lite/ecl_config/: .cproject  CMakeLists.txt  package.xml
kobukilib/src/ecl_lite/ecl_config/include/ecl/: CMakeLists.txt
kobukilib/src/ecl_lite/ecl_config/include/ecl/config/: CMakeLists.txt  macros.hpp
kobukilib/src/ecl_lite/ecl_config/src/: CMakeLists.txt
kobukilib/src/ecl_lite/ecl_config/src/test/: CMakeLists.txt
kobukilib/src/ecl_lite/ecl_config/src/utilities/: CMakeLists.txt
kobukilib/src/ecl_lite/ecl_console/: CMakeLists.txt
kobukilib/src/ecl_lite/ecl_console/license/: CMakeLists.txt
kobukilib/src/ecl_lite/ecl_converters_lite/: .cproject  CMakeLists.txt  package.xml
kobukilib/src/ecl_lite/ecl_converters_lite/include/ecl/: CMakeLists.txt
kobukilib/src/ecl_lite/ecl_converters_lite/include/ecl/converters_lite/: CMakeLists.txt
kobukilib/src/ecl_lite/ecl_converters_lite/src/: CMakeLists.txt
kobukilib/src/ecl_lite/ecl_converters_lite/src/test/: CMakeLists.txt
kobukilib/src/ecl_lite/ecl_errors/: .cproject  CMakeLists.txt  package.xml
kobukilib/src/ecl_lite/ecl_errors/include/ecl/: CMakeLists.txt
kobukilib/src/ecl_lite/ecl_errors/include/ecl/errors/: CMakeLists.txt  flags.hpp  handlers.hpp
kobukilib/src/ecl_lite/ecl_errors/src/examples/: CMakeLists.txt
kobukilib/src/ecl_lite/ecl_errors/src/lib/: CMakeLists.txt
kobukilib/src/ecl_lite/ecl_io/: .cproject  CMakeLists.txt  package.xml
kobukilib/src/ecl_lite/ecl_io/include/ecl/: CMakeLists.txt
kobukilib/src/ecl_lite/ecl_io/include/ecl/io/: CMakeLists.txt
kobukilib/src/ecl_lite/ecl_io/src/examples/: CMakeLists.txt
kobukilib/src/ecl_lite/ecl_io/src/lib/: CMakeLists.txt  socketpair.cpp
kobukilib/src/ecl_lite/ecl_sigslots_lite/: .cproject  CMakeLists.txt  package.xml
kobukilib/src/ecl_lite/ecl_sigslots_lite/include/ecl/: CMakeLists.txt
kobukilib/src/ecl_lite/ecl_sigslots_lite/include/ecl/sigslots_lite/: CMakeLists.txt
kobukilib/src/ecl_lite/ecl_sigslots_lite/src/examples/: CMakeLists.txt
kobukilib/src/ecl_lite/ecl_time_lite/: .cproject  CMakeLists.txt  package.xml
kobukilib/src/ecl_lite/ecl_time_lite/include/ecl/: CMakeLists.txt  time_lite.hpp
kobukilib/src/ecl_lite/ecl_time_lite/include/ecl/time_lite/: CMakeLists.txt  functions_mac.hpp  functions_rt.hpp  types.hpp  types_pos.hpp
kobukilib/src/ecl_lite/ecl_time_lite/src/examples/: CMakeLists.txt  time_functions.cpp
kobukilib/src/ecl_lite/ecl_time_lite/src/lib/: CMakeLists.txt  functions_mac.cpp  functions_rt.cpp
kobukilib/src/ecl_manipulation/: README.md
kobukilib/src/ecl_manipulation/ecl/: CMakeLists.txt  package.xml
kobukilib/src/ecl_manipulation/ecl_manipulation/: CMakeLists.txt  package.xml
kobukilib/src/ecl_manipulation/ecl_manipulators/: .cproject  CMakeLists.txt  package.xml
kobukilib/src/ecl_manipulation/ecl_manipulators/include/ecl/: CMakeLists.txt
kobukilib/src/ecl_manipulation/ecl_manipulators/include/ecl/manipulators/: CMakeLists.txt
kobukilib/src/ecl_manipulation/ecl_manipulators/src/test/: CMakeLists.txt
kobukilib/src/ecl_navigation/ecl_mobile_robot/src/examples/: CMakeLists.txt  partial_inverse.cpp
kobukilib/src/ecl_navigation/ecl_mobile_robot/src/test/: CMakeLists.txt
kobukilib/src/ecl_tools/ecl_build/: .cproject  CHANGELOG.rst  CMakeLists.txt  package.xml
kobukilib/src/ecl_tools/ecl_build/cmake/: ecl_platform_detection.cmake
kobukilib/src/ecl_tools/ecl_build/cmake/modules/: CMakeLists.txt  ecl_platform_detection.cmake
kobukilib/src/ecl_tools/ecl_build/cmake/templates/: CMakeLists.txt
kobukilib/src/ecl_tools/ecl_build/cmake/tests/: CMakeLists.txt
kobukilib/src/ecl_tools/ecl_license/: .cproject  CMakeLists.txt  package.xml
kurt/: .gitignore  CMakeLists.txt
kurt/kurt/: __init__.py  plugin.py  text.py
kurt/kurt/scratch14/: __init__.py  blocks.py  blockspecs_src.py  fixed_objects.py  heights.py  inline_objects.py  objtable.py  user_objects.py
kurt/kurt/scratch20/: __init__.py  blocks.py  commands_src.py  commands_src_bk.py  commands_src_extras.py
kurt/scripts/: postinst
kurt/src/: blocks2raw.py  extract_blocks_20.py  measure_block.py
libfreenect/: CMakeLists.txt  README.md
libfreenect/OpenNI2-FreenectDriver/: CMakeLists.txt
libfreenect/cmake_modules/: SetupDirectories.cmake
libfreenect/examples/: CMakeLists.txt
libfreenect/fakenect/: CMakeLists.txt  fakenect.sh.in
libfreenect/src/: CMakeLists.txt  libfreenect.pc.in
libfreenect/wrappers/cpp/: CMakeLists.txt
libfreenect/wrappers/opencv/: CMakeLists.txt
libfreenect2/: CMakeLists.txt  README.md
metapackages/: jderobot-deps-dev.info  jderobot-deps.info  make_packages.sh
qflightinstruments/: AUTHORS.txt  ChangeLog.txt  README.md  qfi.pro
qflightinstruments/debian/: changelog  control  copyright  rules
qflightinstruments/python/: example.py  threadGUI.py
qflightinstruments/python/qfi/: qfi_ADI.py  qfi_ALT.py  qfi_HSI.py  qfi_SI.py  qfi_TC.py  qfi_VSI.py
qflightinstruments/python3.5/: example.py
qflightinstruments/python3.5/qfi/: qfi_ADI.py  qfi_ALT.py  qfi_SI.py  qfi_TC.py  qfi_rc.py
qflightinstruments/src/: example.pro  qfi.qrc  qfi_ADI.cpp  qfi_ALT.cpp  qfi_HSI.cpp  qfi_NAV.cpp  qfi_PFD.cpp  qfi_SI.cpp  qfi_SI.h  qfi_TC.cpp  qfi_VSI.cpp
qflightinstruments/src/example/: MainWindow.cpp  WidgetALT.ui  WidgetPFD.h  WidgetSI.cpp  WidgetSI.h  WidgetSI.ui  WidgetSix.cpp  (+2 more)
rplidar_ros/: README-JdeRobot.md
sdformat-3.1.1/: .hg_archival.txt  .hgtags
sophus/: CMakeLists.txt  cpackit.cmake
youtube-dl/: CMakeLists.txt
youtube-dl/scripts/: postinst
(+183 files in other folders)
