##############################################################################
# Cmake
##############################################################################

cmake_minimum_required(VERSION 2.8.3)
project(ecl_console)

##############################################################################
# Find
##############################################################################

find_package(catkin REQUIRED COMPONENTS ecl_build ecl_config)

##############################################################################
# Exports
##############################################################################

catkin_package(
    INCLUDE_DIRS
        include
    CATKIN_DEPENDS
        ecl_build
        ecl_config
)

##############################################################################
# Project configuration
##############################################################################

ecl_enable_cxx11_compiler()
include_directories(include ${catkin_INCLUDE_DIRS})

##############################################################################
# Installs
##############################################################################

install(
  DIRECTORY include/ecl/
  DESTINATION ${CATKIN_GLOBAL_INCLUDE_DESTINATION}/ecl
  FILES_MATCHING PATTERN "*.hpp"
)
