<package>
  <name>ecl</name>
  <version>0.50.2</version>
  <description>
    Metapackage bringing all of ecl together.
  </description>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/ecl</url>
  <!--<url type="repository">https://github.com/stonier/ecl_manipulation</url>
  <url type="bugtracker">https://github.com/stonier/ecl_manipulation/issues</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>ecl_tools</run_depend>
  <run_depend>ecl_lite</run_depend>
  <run_depend>ecl_core</run_depend>
  <run_depend>ecl_navigation</run_depend>
  <run_depend>ecl_manipulation</run_depend>
  <export>
    <metapackage/>
  </export>
</package>
