<?xml version="1.0"?>
<package>
  <name>ecl_manipulators</name>
  <version>0.50.2</version>
  <description>
    Deploys various manipulation algorithms, currently just 
    feedforward filters (interpolations). 
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/ecl_manipulators</url>
  <url type="repository">https://github.com/stonier/ecl_manipulation</url>
  <url type="bugtracker">https://github.com/stonier/ecl_manipulation/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ecl_license</build_depend>
  <build_depend>ecl_exceptions</build_depend>
  <build_depend>ecl_geometry</build_depend>
  <build_depend>ecl_formatters</build_depend>
  
  <run_depend>ecl_license</run_depend>
  <run_depend>ecl_exceptions</run_depend>
  <run_depend>ecl_geometry</run_depend>
  <run_depend>ecl_formatters</run_depend>
</package>


