##############################################################################
# Cmake
##############################################################################

cmake_minimum_required(VERSION 2.8.3)
project(ecl_license)

##############################################################################
# Catkin
##############################################################################

find_package(catkin)

catkin_package()


##############################################################################
# Installs
##############################################################################


install(DIRECTORY licenses 
        DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
        PATTERN ".svn" EXCLUDE
        PATTERN "CMakeLists.txt" EXCLUDE
       )
